Added support for lazy initialisation of viewModel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycleVersion"
 
+    def fragmentViewModelDelegate = "1.5.5"
+    implementation "androidx.fragment:fragment-ktx:$fragmentViewModelDelegate"
+
+
 
 }
