--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.LocalStorage"
         tools:targetApi="31">
         <activity
-            android:name=".feat.todo.TodoActivity"
+            android:name=".features.todo.TodoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".feat.employee.MainActivity"
+            android:name=".features.employee.MainActivity"
             android:exported="false">
         </activity>
     </application>
