--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.LocalStorage"
         tools:targetApi="31">
         <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".features.todo.activities.EditTodoActivity"
             android:exported="false">
             <meta-data
@@ -35,7 +38,7 @@
         </activity>
         <activity
             android:name=".features.employee.MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
